--- a/config.yaml
+++ b/config.yaml
@@ -37,6 +37,7 @@ IgnoreCourseNames:
 - "Integrity Tutorial - Cohort 6 [AY2324]"
 - "New Graduate Student Orientation [ORG AY2324]"
 - "iTriton Orientation [ORG AY2324]"
+- "Preparing for Success: Online Course for Instructional Assistants [AY2324]"
 VerboseMode : true
 # Canvas 公告 配置
 AnouncementConfig : 
