--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # 这是 TodoSynchronizer 的配置文件
 # 注意：修改配置请严格遵循格式；请勿删除字段，否则程序可能无法正常运行。
 # ———————————————————————————————————————————
-TimeZone: Pacific Standard Time
+TimeZone: Pacific Daylight Time
 # 同步 Todo 列表的模式
 # 可选值: Category | Course
 # Category 表示按项目种类创建列表
@@ -202,7 +202,7 @@ QuizConfig :
 # Canvas 讨论 配置
 DiscussionConfig : 
   # 是否将 Canvas 讨论同步到 Todo
-  Enabled : true
+  Enabled : false
   CreateContent : true
   # 若 Todo 列表内无当前的讨论，
   # 则把创建的新待办事项的过期时间设置为讨论的发布时间
