--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ VerboseMode : true
 # Canvas 公告 配置
 AnouncementConfig : 
   # 是否将 Canvas 公告同步到 Todo
-  Enabled : true
+  Enabled : false
   # 若 Todo 列表内无当前的公告，
   # 则在创建的新待办事项的备注中包含公告的内容
   CreateContent : true
